Fix li-store min-height on small screen

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -837,7 +837,13 @@ $sidebar-margins: 10px;
             height: 34px;
           }
           @media screen and (max-width: 991px) {
-            min-height: 34px
+            // Don't apply min-height if direct child has d-none class
+            &:not(:has(> .d-none)) {
+              min-height: 34px;
+            }
+            &:has(> .d-none) {
+              min-height: auto;
+            }
           }
           padding: 2px 2px 2px 6px;
 
